--- a/res/lang/messages_de_DE.properties
+++ b/res/lang/messages_de_DE.properties
@@ -1,18 +1,29 @@
+action.choosefolder=Durchsuchen
+action.close=Schließen
+action.create=Erstellen
 appname.windowtitle=CiteHelper
 gui.menu.exit=Beenden
 label.bibtexfiles=BibTeX-Dateien
+label.error=Fehler
 label.na=N/A
 menu.export=Export
 menu.file=Datei
 menu.import=Import
+menu.data=Daten
+menu.newproject=Neues Project
+menu.openworkdir=Arbeitsverzeichnis öffnen
+menu.projectproperties=Projekteinstellungen
 messages.error.missingkey=No Key provided.
 messages.error.nofile=Keine Datei angehängt. Stattdessen auf Google Scholar suchen?
-messages.error.openfailed=Konnte angehängte Datei nicht öffnen: 
-messages.error.urlopen=Konnte URL nicht öffnen: 
 messages.error.createproject=Projekterstellung fehlgeschlagen unter {0}
 messages.error.fileparse=Konnte Datei nicht lesen: {0}
 messages.error.watchstart=Konnte Arbeitsverzeichnis nicht beobachten: {0}.
+messages.error.workingdirempty=Kein Arbeitsverzeichnis ausgewählt
+messages.error.openfailed=Konnte angehängte Datei nicht öffnen: 
+messages.error.urlopen=Konnte URL nicht öffnen: 
 tableheader.author=Autor
 tableheader.citekey=BibTeX-Key
 tableheader.title=Titel
 tableheader.year=Jahr
+title.newproject=Neues Projekt
+title.selectworkingdir=Arbeitsverzeichnis wählen
