--- a/res/lang/messages.properties
+++ b/res/lang/messages.properties
@@ -9,12 +9,16 @@ label.na=N/A
 menu.export=Export
 menu.file=File
 menu.import=Import
+menu.data=Data
+menu.newproject=New project
+menu.openworkdir=Open work directory
+menu.projectproperties=Project properties
 messages.error.missingkey=No Key provided.
 messages.error.nofile=No file attached, search on Google Scholar instead?
 messages.error.createproject=Could not create project at {0}
 messages.error.fileparse=Could not parse file: {0}
 messages.error.watchstart=Could not start watching {0}.
-messages.error.workingdirempty=Working dir must not be empty.
+messages.error.workingdirempty=No working dir chosen.
 messages.error.openfailed=Could not open associated file for paper 
 messages.error.urlopen=Could not open url: 
 tableheader.author=Author
