Open project from folder.

--- a/res/lang/messages.properties
+++ b/res/lang/messages.properties
@@ -10,7 +10,8 @@ menu.export=Export
 menu.file=File
 menu.import=Import
 menu.data=Data
-menu.newproject=New project
+menu.newproject=New project...
+menu.openproject=Open project...
 menu.openworkdir=Open work directory
 menu.projectproperties=Project properties
 messages.error.missingkey=No Key provided.
@@ -21,10 +22,12 @@ messages.error.watchstart=Could not start watching {0}.
 messages.error.workingdirempty=No working dir chosen.
 messages.error.openfailed=Could not open associated file for paper 
 messages.error.urlopen=Could not open url: 
+messages.error.noprojectfolder=Selected folder is no project folder
 tableheader.author=Author
 tableheader.citekey=Citekey
 tableheader.title=Title
 tableheader.year=Year
 title.errordialog=Error: {0}
+title.openproject=Open project
 title.newproject=New project
 title.selectworkingdir=Select working directory
