--- a/res/lang/messages_de_DE.properties
+++ b/res/lang/messages_de_DE.properties
@@ -10,7 +10,8 @@ menu.export=Export
 menu.file=Datei
 menu.import=Import
 menu.data=Daten
-menu.newproject=Neues Project
+menu.newproject=Neues Projekt...
+menu.openproject=Projekt öffnen...
 menu.openworkdir=Arbeitsverzeichnis öffnen
 menu.projectproperties=Projekteinstellungen
 messages.error.missingkey=No Key provided.
@@ -21,9 +22,12 @@ messages.error.watchstart=Konnte Arbeitsverzeichnis nicht beobachten: {0}.
 messages.error.workingdirempty=Kein Arbeitsverzeichnis ausgewählt
 messages.error.openfailed=Konnte angehängte Datei nicht öffnen: 
 messages.error.urlopen=Konnte URL nicht öffnen: 
+messages.error.noprojectfolder=Der gewählte Ordner ist kein Projektordner
 tableheader.author=Autor
 tableheader.citekey=BibTeX-Key
 tableheader.title=Titel
 tableheader.year=Jahr
+title.errordialog=Fehler: {0}
 title.newproject=Neues Projekt
+title.openproject=Projekt öffnen
 title.selectworkingdir=Arbeitsverzeichnis wählen
