Added labels to createproject dialog.

--- a/res/lang/messages.properties
+++ b/res/lang/messages.properties
@@ -4,8 +4,9 @@ action.create=Create
 appname.windowtitle=CiteHelper
 gui.menu.exit=Quit
 label.bibtexfiles=BibTeX files
-label.error=Error
 label.na=N/A
+label.projectname=Project name
+label.workingdir=Working directory
 menu.export=Export
 menu.file=File
 menu.import=Import
@@ -19,7 +20,7 @@ messages.error.nofile=No file attached, search on Google Scholar instead?
 messages.error.createproject=Could not create project at {0}
 messages.error.fileparse=Could not parse file: {0}
 messages.error.watchstart=Could not start watching {0}.
-messages.error.workingdirempty=No working dir chosen.
+messages.error.workingdirempty=No working directory selected.
 messages.error.openfailed=Could not open associated file for paper 
 messages.error.urlopen=Could not open url: 
 messages.error.noprojectfolder=Selected folder is no project folder
@@ -29,5 +30,4 @@ tableheader.title=Title
 tableheader.year=Year
 title.errordialog=Error: {0}
 title.openproject=Open project
-title.newproject=New project
 title.selectworkingdir=Select working directory
