--- a/res/lang/messages_de_DE.properties
+++ b/res/lang/messages_de_DE.properties
@@ -6,6 +6,8 @@ gui.menu.exit=Beenden
 label.bibtexfiles=BibTeX-Dateien
 label.error=Fehler
 label.na=N/A
+label.projectname=Projektname
+label.workingdir=Arbeitsverzeichnis
 menu.export=Export
 menu.file=Datei
 menu.import=Import
