--- a/res/lang/messages.properties
+++ b/res/lang/messages.properties
@@ -1,15 +1,17 @@
 action.choosefolder=Choose
 action.close=Close
 action.create=Create
+action.import=Import
 appname.windowtitle=CiteHelper
 gui.menu.exit=Quit
-label.bibtexfiles=BibTeX files
+label.bibtexfiles=BibTeX files (*.bib, *.txt)
 label.na=N/A
 label.projectname=Project name
 label.workingdir=Working directory
-menu.export=Export
+menu.export=Export library
+menu.exportselection=Export selection...
 menu.file=File
-menu.import=Import
+menu.import=Import BibTeX-file...
 menu.data=Data
 menu.newproject=New project...
 menu.openproject=Open project...
@@ -31,3 +33,4 @@ tableheader.year=Year
 title.errordialog=Error: {0}
 title.openproject=Open project
 title.selectworkingdir=Select working directory
+title.import=Import from BibTeX
