--- a/res/lang/messages_de_DE.properties
+++ b/res/lang/messages_de_DE.properties
@@ -1,16 +1,18 @@
 action.choosefolder=Durchsuchen
 action.close=Schließen
 action.create=Erstellen
+action.import=Importieren
 appname.windowtitle=CiteHelper
 gui.menu.exit=Beenden
-label.bibtexfiles=BibTeX-Dateien
+label.bibtexfiles=BibTeX-Dateien (*.bib, *.txt)
 label.error=Fehler
 label.na=N/A
 label.projectname=Projektname
 label.workingdir=Arbeitsverzeichnis
-menu.export=Export
+menu.export=Bibliothek exportieren
+menu.exportselection=Auswahl exportieren...
 menu.file=Datei
-menu.import=Import
+menu.import=BibTeX-Datei importieren...
 menu.data=Daten
 menu.newproject=Neues Projekt...
 menu.openproject=Projekt öffnen...
@@ -33,3 +35,4 @@ title.errordialog=Fehler: {0}
 title.newproject=Neues Projekt
 title.openproject=Projekt öffnen
 title.selectworkingdir=Arbeitsverzeichnis wählen
+title.import=BibTeX-Datei importieren
