Export library and ignore library file on import.

--- a/res/lang/messages.properties
+++ b/res/lang/messages.properties
@@ -20,12 +20,14 @@ menu.projectproperties=Project properties
 messages.error.missingkey=No Key provided.
 messages.error.nofile=No file attached, search on Google Scholar instead?
 messages.error.createproject=Could not create project at {0}
+messages.error.exportlibrary=Library export failed
 messages.error.fileparse=Could not parse file: {0}
 messages.error.watchstart=Could not start watching {0}.
 messages.error.workingdirempty=No working directory selected.
 messages.error.openfailed=Could not open associated file for paper 
 messages.error.urlopen=Could not open url: 
 messages.error.noprojectfolder=Selected folder is no project folder
+messages.libraryexport=Library exported to {0}
 tableheader.author=Author
 tableheader.citekey=Citekey
 tableheader.title=Title
