--- a/res/lang/messages_de_DE.properties
+++ b/res/lang/messages_de_DE.properties
@@ -21,12 +21,14 @@ menu.projectproperties=Projekteinstellungen
 messages.error.missingkey=No Key provided.
 messages.error.nofile=Keine Datei angehängt. Stattdessen auf Google Scholar suchen?
 messages.error.createproject=Projekterstellung fehlgeschlagen unter {0}
+messages.error.exportlibrary=Exportieren der Bibliothek fehlgeschlagen
 messages.error.fileparse=Konnte Datei nicht lesen: {0}
 messages.error.watchstart=Konnte Arbeitsverzeichnis nicht beobachten: {0}.
 messages.error.workingdirempty=Kein Arbeitsverzeichnis ausgewählt
 messages.error.openfailed=Konnte angehängte Datei nicht öffnen: 
 messages.error.urlopen=Konnte URL nicht öffnen: 
 messages.error.noprojectfolder=Der gewählte Ordner ist kein Projektordner
+messages.libraryexport=Bibliothek exportiert nach {0}
 tableheader.author=Autor
 tableheader.citekey=BibTeX-Key
 tableheader.title=Titel
