--- a/res/lang/messages.properties
+++ b/res/lang/messages.properties
@@ -1,10 +1,14 @@
+action.assignpdf=Assign PDF
 action.choosefolder=Choose
 action.close=Close
 action.create=Create
+action.delete=Delete entry
 action.import=Import
+action.openpdf=Open PDF
 appname.windowtitle=CiteHelper
 gui.menu.exit=Quit
 label.bibtexfiles=BibTeX files (*.bib, *.txt)
+label.emptysidebar=Select a paper to view properties.
 label.na=N/A
 label.projectname=Project name
 label.workingdir=Working directory
@@ -30,7 +34,9 @@ messages.error.noprojectfolder=Selected folder is no project folder
 messages.libraryexport=Library exported to {0}
 tableheader.author=Author
 tableheader.citekey=Citekey
+tableheader.key=Key
 tableheader.title=Title
+tableheader.value=Value
 tableheader.year=Year
 title.errordialog=Error: {0}
 title.openproject=Open project
