--- a/res/lang/messages_de_DE.properties
+++ b/res/lang/messages_de_DE.properties
@@ -1,10 +1,14 @@
+action.assignpdf=PDF zuweisen
 action.choosefolder=Durchsuchen
 action.close=Schließen
 action.create=Erstellen
+action.delete=Eintrag löschen
 action.import=Importieren
+action.openpdf=PDF öffnen
 appname.windowtitle=CiteHelper
 gui.menu.exit=Beenden
 label.bibtexfiles=BibTeX-Dateien (*.bib, *.txt)
+label.emptysidebar=Eintrag auswählen, um Attribute anzuzeigen.
 label.error=Fehler
 label.na=N/A
 label.projectname=Projektname
@@ -31,7 +35,9 @@ messages.error.noprojectfolder=Der gewählte Ordner ist kein Projektordner
 messages.libraryexport=Bibliothek exportiert nach {0}
 tableheader.author=Autor
 tableheader.citekey=BibTeX-Key
+tableheader.key=Attribut
 tableheader.title=Titel
+tableheader.value=Wert
 tableheader.year=Jahr
 title.errordialog=Fehler: {0}
 title.newproject=Neues Projekt
