Implemented PDF assigning.

--- a/res/lang/messages.properties
+++ b/res/lang/messages.properties
@@ -1,3 +1,4 @@
+action.assign=Assign
 action.assignpdf=Assign PDF
 action.choosefolder=Choose
 action.close=Close
@@ -10,6 +11,7 @@ gui.menu.exit=Quit
 label.bibtexfiles=BibTeX files (*.bib, *.txt)
 label.emptysidebar=Select a paper to view properties.
 label.na=N/A
+label.pdffiles=PDF-files
 label.projectname=Project name
 label.workingdir=Working directory
 menu.export=Export library
@@ -26,6 +28,7 @@ messages.error.nofile=No file attached, search on Google Scholar instead?
 messages.error.createproject=Could not create project at {0}
 messages.error.exportlibrary=Library export failed
 messages.error.fileparse=Could not parse file: {0}
+messages.error.pdfcopy=Could not copy PDF from {0}
 messages.error.watchstart=Could not start watching {0}.
 messages.error.workingdirempty=No working directory selected.
 messages.error.openfailed=Could not open associated file for paper 
@@ -38,6 +41,7 @@ tableheader.key=Key
 tableheader.title=Title
 tableheader.value=Value
 tableheader.year=Year
+title.choosepdf=Choose pdf for {0}
 title.errordialog=Error: {0}
 title.openproject=Open project
 title.selectworkingdir=Select working directory
