--- a/res/lang/messages_de_DE.properties
+++ b/res/lang/messages_de_DE.properties
@@ -1,3 +1,4 @@
+action.assign=Zuweisen
 action.assignpdf=PDF zuweisen
 action.choosefolder=Durchsuchen
 action.close=Schließen
@@ -11,6 +12,7 @@ label.bibtexfiles=BibTeX-Dateien (*.bib, *.txt)
 label.emptysidebar=Eintrag auswählen, um Attribute anzuzeigen.
 label.error=Fehler
 label.na=N/A
+label.pdffiles=PDF-Dateien
 label.projectname=Projektname
 label.workingdir=Arbeitsverzeichnis
 menu.export=Bibliothek exportieren
@@ -25,6 +27,7 @@ menu.projectproperties=Projekteinstellungen
 messages.error.missingkey=No Key provided.
 messages.error.nofile=Keine Datei angehängt. Stattdessen auf Google Scholar suchen?
 messages.error.createproject=Projekterstellung fehlgeschlagen unter {0}
+messages.error.pdfcopy=Konnte PDF nicht kopieren von {0}
 messages.error.exportlibrary=Exportieren der Bibliothek fehlgeschlagen
 messages.error.fileparse=Konnte Datei nicht lesen: {0}
 messages.error.watchstart=Konnte Arbeitsverzeichnis nicht beobachten: {0}.
@@ -39,6 +42,7 @@ tableheader.key=Attribut
 tableheader.title=Titel
 tableheader.value=Wert
 tableheader.year=Jahr
+title.choosepdf=PDF zuweisen zu {0}
 title.errordialog=Fehler: {0}
 title.newproject=Neues Projekt
 title.openproject=Projekt öffnen
