Delete or exchange assigned pdf.

--- a/res/lang/messages.properties
+++ b/res/lang/messages.properties
@@ -4,6 +4,7 @@ action.choosefolder=Choose
 action.close=Close
 action.create=Create
 action.delete=Delete entry
+action.deletepdf=Delete PDF
 action.import=Import
 action.openpdf=Open PDF
 appname.windowtitle=CiteHelper
@@ -23,12 +24,14 @@ menu.newproject=New project...
 menu.openproject=Open project...
 menu.openworkdir=Open work directory
 menu.projectproperties=Project properties
+messages.deletepdf=This will delete assigned pdf.
 messages.error.missingkey=No Key provided.
 messages.error.nofile=No file attached, search on Google Scholar instead?
 messages.error.createproject=Could not create project at {0}
 messages.error.exportlibrary=Library export failed
 messages.error.fileparse=Could not parse file: {0}
 messages.error.pdfcopy=Could not copy PDF from {0}
+messages.error.pdfdelete=Could not delete assigned pdf
 messages.error.watchstart=Could not start watching {0}.
 messages.error.workingdirempty=No working directory selected.
 messages.error.openfailed=Could not open associated file for paper 
@@ -42,6 +45,7 @@ tableheader.title=Title
 tableheader.value=Value
 tableheader.year=Year
 title.choosepdf=Choose pdf for {0}
+title.deletepdf=Delete assigned pdf
 title.errordialog=Error: {0}
 title.openproject=Open project
 title.selectworkingdir=Select working directory
