--- a/res/lang/messages_de_DE.properties
+++ b/res/lang/messages_de_DE.properties
@@ -4,6 +4,7 @@ action.choosefolder=Durchsuchen
 action.close=Schließen
 action.create=Erstellen
 action.delete=Eintrag löschen
+action.deletepdf=PDF löschen
 action.import=Importieren
 action.openpdf=PDF öffnen
 appname.windowtitle=CiteHelper
@@ -24,10 +25,12 @@ menu.newproject=Neues Projekt...
 menu.openproject=Projekt öffnen...
 menu.openworkdir=Arbeitsverzeichnis öffnen
 menu.projectproperties=Projekteinstellungen
+messages.deletepdf=Dies wird die angehängte PDF löschen
 messages.error.missingkey=No Key provided.
 messages.error.nofile=Keine Datei angehängt. Stattdessen auf Google Scholar suchen?
 messages.error.createproject=Projekterstellung fehlgeschlagen unter {0}
 messages.error.pdfcopy=Konnte PDF nicht kopieren von {0}
+messages.error.pdfdelete=Konnte angehängte PDF nicht löschen
 messages.error.exportlibrary=Exportieren der Bibliothek fehlgeschlagen
 messages.error.fileparse=Konnte Datei nicht lesen: {0}
 messages.error.watchstart=Konnte Arbeitsverzeichnis nicht beobachten: {0}.
@@ -43,6 +46,7 @@ tableheader.title=Titel
 tableheader.value=Wert
 tableheader.year=Jahr
 title.choosepdf=PDF zuweisen zu {0}
+title.deletepdf=Angehängte PDF löschen
 title.errordialog=Fehler: {0}
 title.newproject=Neues Projekt
 title.openproject=Projekt öffnen
