Import from clipboard.

--- a/res/lang/messages.properties
+++ b/res/lang/messages.properties
@@ -19,6 +19,7 @@ menu.export=Export library
 menu.exportselection=Export selection...
 menu.file=File
 menu.import=Import BibTeX-file...
+menu.importclipboard=Import from clipboard
 menu.data=Data
 menu.newproject=New project...
 menu.openproject=Open project...
@@ -27,6 +28,7 @@ menu.projectproperties=Project properties
 messages.deletepdf=This will delete assigned pdf.
 messages.error.missingkey=No Key provided.
 messages.error.nofile=No file attached, search on Google Scholar instead?
+messages.error.noclipdata=No valid data found in clipboard.
 messages.error.createproject=Could not create project at {0}
 messages.error.exportlibrary=Library export failed
 messages.error.fileparse=Could not parse file: {0}
