--- a/res/lang/messages_de_DE.properties
+++ b/res/lang/messages_de_DE.properties
@@ -20,6 +20,7 @@ menu.export=Bibliothek exportieren
 menu.exportselection=Auswahl exportieren...
 menu.file=Datei
 menu.import=BibTeX-Datei importieren...
+menu.importclipboard=Aus Zwischenablage importieren
 menu.data=Daten
 menu.newproject=Neues Projekt...
 menu.openproject=Projekt öffnen...
@@ -27,6 +28,7 @@ menu.openworkdir=Arbeitsverzeichnis öffnen
 menu.projectproperties=Projekteinstellungen
 messages.deletepdf=Dies wird die angehängte PDF löschen
 messages.error.missingkey=No Key provided.
+messages.error.noclipdata=Keine gültigen Daten in der Zwischenablage gefunden
 messages.error.nofile=Keine Datei angehängt. Stattdessen auf Google Scholar suchen?
 messages.error.createproject=Projekterstellung fehlgeschlagen unter {0}
 messages.error.pdfcopy=Konnte PDF nicht kopieren von {0}
